--- a/front/style.css
+++ b/front/style.css
@@ -1,3 +1,10 @@
+body {
+  /* other styles for the body element */
+  background-image: url('/front/images/space.jpeg'); /* Add the background image */
+  background-size: cover; /* Scale the image to cover the entire body element */
+  background-position: center; /* Position the image in the center of the body element */
+  background-repeat: no-repeat; /* Do not repeat the image */
+}
 #navbar {
     display: flex;
     align-items: center;
@@ -6,21 +13,42 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 0 20px;
+    background-size: cover; /* Scale the image to cover the entire navigation bar */
+    background-position: center; 
+  
   }
   
   .nav-item {
     flex: 1;
     text-align: center;
-    font-size: 18px;
-    font-weight: bold;
     color: #333;
     cursor: pointer;
     transition: all 0.3s;
   }
   
-  .nav-item:hover {
-    background: linear-gradient(to bottom, transparent, #fafafa);
-    border-top: 2px solid #aaa;
-    border-bottom: 2px solid #aaa;
+
+  
+  nav {
+    width: 200px; /* Set the width of the navigation bar */
+  }
+  
+  ul {
+    list-style: none; /* Remove the default bullet points from the list */
+  }
+  
+  li {
+    margin-bottom: 10px; /* Add some space between the menu items */
+  }
+  
+  a {
+    display: block; /* Make the links block-level elements to fill the entire width of the list item */
+    padding: 10px; /* Add some padding to the links */
+    text-decoration: none; /* Remove the default underline from the links */
+    color: #fff;
+  }
+  
+  a:hover {
+    background-color: #eee; /* Change the background color of the links when hovered over */
+    border-radius: 1px;
   }
   
