--- a/front/style.css
+++ b/front/style.css
@@ -21,7 +21,7 @@ body {
   .nav-item {
     flex: 1;
     text-align: center;
-    color: #333;
+    color: #fff;
     cursor: pointer;
     transition: all 0.3s;
   }
