--- a/front/style.css
+++ b/front/style.css
@@ -16,7 +16,12 @@ body {
     background-position: center; 
   
   }
-  
+  img {
+    width: 25px;
+    height:auto;
+    float:left;
+    padding-top: 5px;
+  }
   .nav-item {
     flex: 1;
     text-align: center;
@@ -37,6 +42,8 @@ body {
   
   li {
     margin-bottom: 10px; /* Add some space between the menu items */
+    
+
   }
   
   a {
@@ -46,6 +53,12 @@ body {
     color: #fff;
   }
   
+p  {
+  display: block; /* Make the links block-level elements to fill the entire width of the list item */
+  padding: 10px; /* Add some padding to the links */
+  text-decoration: none; /* Remove the default underline from the links */
+  color: #fff;
+}
   a:hover {
     background-color: #eee; /* Change the background color of the links when hovered over */
     border-radius: 1px;
