--- a/front/style.css
+++ b/front/style.css
@@ -1,9 +1,11 @@
 body {
   /* other styles for the body element */
   background-image: url('/front/images/space.jpeg'); /* Add the background image */
-  background-size: cover; /* Scale the image to cover the entire body element */
-  background-position: center; /* Position the image in the center of the body element */
-  background-repeat: no-repeat; /* Do not repeat the image */
+  /*background-size: cover; /* Scale the image to cover the entire body element */
+  /*background-position: center; /* Position the image in the center of the body element */
+  /*background-repeat: no-repeat; /* Do not repeat the image */
+  max-width: 100%;
+  height: auto;
 }
 #navbar {
     display: flex;
@@ -41,7 +43,7 @@ body {
   }
   
   li {
-    margin-bottom: 10px; /* Add some space between the menu items */
+    margin-bottom: 30px; /* Add some space between the menu items */
     font-family: 'Seymour One', sans-serif;
     font-size: x-large;
 
