--- a/front/style.css
+++ b/front/style.css
@@ -6,40 +6,38 @@ body {
   background-repeat: no-repeat; /* Do not repeat the image */
 }
 #navbar {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    background: linear-gradient(to bottom, transparent, #fff);
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    padding: 0 20px;
-    background-size: cover; /* Scale the image to cover the entire navigation bar */
-    background-position: center; 
+  width: 100%;
+  background-color: #333;
+  overflow: auto;
   
   }
   
   .nav-item {
-    flex: 1;
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-    transition: all 0.3s;
+    float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
   }
   
 
   
-  nav {
-    width: 200px; /* Set the width of the navigation bar */
+  #navbar a:hover {
+    background-color: #ddd;
+    color: black;
   }
   
-  ul {
-    list-style: none; /* Remove the default bullet points from the list */
+  #navbar a.active {
+    background-color: #4CAF50;
+    color: white;
   }
   
-  li {
-    margin-bottom: 10px; /* Add some space between the menu items */
+  #navbar-right {
+    float: right;
   }
-  
+
+
   a {
     display: block; /* Make the links block-level elements to fill the entire width of the list item */
     padding: 10px; /* Add some padding to the links */
@@ -52,3 +50,47 @@ body {
     border-radius: 1px;
   }
   
+  table {
+    border-spacing: 10px;
+    border-collapse: separate;
+    cellspacing: 100px;
+    width: 1200px;
+  }
+  
+  td {
+    border: 1px solid black;
+    padding: 10px;
+  }
+
+  p {
+    background-color: white;
+  }
+
+
+  #search-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  #search-input {
+    width: 20%;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 0 12px;
+    font-size: 16px;
+  }
+  
+  #search-button {
+    width: 20%;
+    height: 40px;
+    background-color: #020580;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  #search-button:hover {
+    background-color: #be0000;
+  }
