--- a/front/style.css
+++ b/front/style.css
@@ -70,3 +70,51 @@ p  {
     border-radius: 1px;
   }
   
+  #search-container {
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
+  
+  #search-input {
+    width: 40%;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 0 12px;
+    font-size: 16px;
+    
+  }
+  
+  #search-button {
+    width: 10%;
+    height: 40px;
+    background-color: #005bb1;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  #search-button:hover {
+    background-color: #006305;
+  }
+
+  #dagens {
+    width: 100%;
+  border: 1px solid rgb(255, 255, 255);
+  }
+
+
+
+  #AstronomiDag {
+    position: relative;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    
+    width: 1200px;
+    height: 600px;
+    background-color: rgb(99, 100, 100);
+  }
