--- a/front/style.css
+++ b/front/style.css
@@ -1,6 +1,6 @@
 body {
   /* other styles for the body element */
-  background-image: url('/front/images/space.jpeg'); /* Add the background image */
+  background-image: url('./images/space.jpeg'); /* Add the background image */
   /*background-size: cover; /* Scale the image to cover the entire body element */
   /*background-position: center; /* Position the image in the center of the body element */
   /*background-repeat: no-repeat; /* Do not repeat the image */
@@ -18,7 +18,7 @@ body {
     background-position: center; 
   
   }
-  img {
+.icons{
     width: 25px;
     height:25px;
     float: left;
@@ -71,6 +71,8 @@ p  {
   }
   
   #search-container {
+    position: relative;
+    z-index: 3;
     display: flex;
     margin: auto;
     justify-content: center;
@@ -117,4 +119,61 @@ p  {
     width: 1200px;
     height: 600px;
     background-color: rgb(99, 100, 100);
+  }
+
+
+
+
+
+
+
+
+  #content{
+    display: flex;
+    align-items: flex-start;
+
+  }
+
+
+#tableContainer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+  #imgTable {
+    width: 80%;
+    background: #eee;
+    padding: 1rem;
+    text-align: center;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #imgTable tbody {
+    text-align: center;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+  }
+  #imgTable th {
+    border-bottom: 1px solid gray;
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+    padding: 0.5rem;
+  }
+  
+  #imgTable td {
+    border-bottom: 1px solid lightgray;
+  }
+  #tracksTable tbody {
+    text-align: center;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
   }
