--- a/frontend/style.css
+++ b/frontend/style.css
@@ -186,3 +186,42 @@ div > button{
     cursor: pointer;
     display: block;
   }
+
+
+
+  #tableContainerApod{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+    #apodTable {
+      width: 80%;
+      background: #eee;
+      padding: 1rem;
+      text-align: center;
+      margin-top: 2%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #apodTable tbody {
+      text-align: center;
+      margin-top: 2%;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 10px;
+    }
+    #apodTable th {
+      border-bottom: 1px solid gray;
+      width: 100%;
+      height: 100%;
+      font-weight: bold;
+      padding: 0.5rem;
+    }
+    
+    #apodTable td {
+      border-bottom: 1px solid lightgray;
+    }
+   
