--- a/frontend/style.css
+++ b/frontend/style.css
@@ -28,6 +28,8 @@ body {
   
   ul {
     list-style: none; /* Remove the default bullet points from the list */
+    color: white;
+    width:200px;
   }
   
   li {
@@ -79,7 +81,7 @@ p  {
   #search-button {
     width: 10%;
     height: 40px;
-    background-color: #005bb1;
+    background-color: rgb(59, 59, 74);
     color: white;
     border: none;
     border-radius: 4px;
@@ -97,6 +99,11 @@ p  {
   }
 
 
+  #field {
+    background-color: #ccc;
+    width:200px;
+    height:200px;
+  }
 
   #AstronomiDag {
     position: relative;
@@ -120,7 +127,6 @@ p  {
   #content{
     display: flex;
     align-items: flex-start;
-
   }
 
 
@@ -133,13 +139,14 @@ p  {
 
 
   #imgTable {
-    width: 80%;
-    background: #eee;
+    width: 400px;
+    background: #fff;
     padding: 1rem;
     text-align: center;
     margin-top: 2%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-right: 20%;
+    border-radius: 10px;
+
   }
   #imgTable tbody {
     text-align: center;
@@ -150,14 +157,26 @@ p  {
   }
   #imgTable th {
     border-bottom: 1px solid gray;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
     font-weight: bold;
     padding: 0.5rem;
   }
-  
+
+  #imgTable img {
+width:100px;
+height:100px;
+border-radius: 5px;
+  }
+
   #imgTable td {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid rgb(114, 94, 94);
+    width:50%;
+  }
+
+  tr {
+    width:50px;
+
   }
   #tracksTable tbody {
     text-align: center;
@@ -166,19 +185,20 @@ p  {
     margin-right: auto;
     border-radius: 10px;
   }
-
+  .img-table{
+    width: 100px;
+    height: 100px;
+}
   
 
 #nav {
     display: flex;
-    justify-content: space-between; /* center the links in the navbar horizontally*/
-    align-items: center; /* align the links vertically in the middle*/
-    background-image: url('./images/space.jpeg');
-    
+    justify-content: space-around;
+    align-content: center;
   }
 
 div > button{
-    background-color: blue;
+    background-color: rgb(59, 59, 74);
     color: rgb(255, 255, 255);
     padding: 8px;
     border-radius: 5px;
@@ -186,42 +206,3 @@ div > button{
     cursor: pointer;
     display: block;
   }
-
-
-
-  #tableContainerApod{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  
-    #apodTable {
-      width: 80%;
-      background: #eee;
-      padding: 1rem;
-      text-align: center;
-      margin-top: 2%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    #apodTable tbody {
-      text-align: center;
-      margin-top: 2%;
-      margin-left: auto;
-      margin-right: auto;
-      border-radius: 10px;
-    }
-    #apodTable th {
-      border-bottom: 1px solid gray;
-      width: 100%;
-      height: 100%;
-      font-weight: bold;
-      padding: 0.5rem;
-    }
-    
-    #apodTable td {
-      border-bottom: 1px solid lightgray;
-    }
-   
