--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,6 +6,7 @@ body {
   /*background-repeat: no-repeat; /* Do not repeat the image */
   max-width: 100%;
   height: auto;
+  color:#fff
 }
 
 .icons{
@@ -111,18 +112,10 @@ p  {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    
     width: 1200px;
     height: 600px;
     background-color: rgb(99, 100, 100);
   }
-
-
-
-
-
-
-
 
   #content{
     display: flex;
@@ -161,6 +154,7 @@ p  {
     height: 50%;
     font-weight: bold;
     padding: 0.5rem;
+    color:black
   }
 
   #imgTable img {
@@ -172,6 +166,7 @@ border-radius: 5px;
   #imgTable td {
     border-bottom: 1px solid rgb(114, 94, 94);
     width:50%;
+    color:black
   }
 
   tr {
