--- a/project/style.css
+++ b/project/style.css
@@ -1,12 +1,36 @@
 body {
+  
+  font-family: 'Nunito', sans-serif;
   /* other styles for the body element */
-  background-image: url('./images/space.jpeg'); /* Add the background image */
+  background: url(images/planets_universe_17-wallpaper-1920x1080.jpg); /* Add the background image */
   /*background-size: cover; /* Scale the image to cover the entire body element */
   /*background-position: center; /* Position the image in the center of the body element */
   /*background-repeat: no-repeat; /* Do not repeat the image */
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   max-width: 100%;
   height: auto;
   color:#fff
+
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: unset;
+}
+
+.topnav a {
+  float: left;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.topnav a:hover {
+  background-color: royalblue;
+  color: white;
 }
 
 .icons{
@@ -22,12 +46,18 @@ body {
     cursor: pointer;
     transition: all 0.3s;
   }
-  
+  #login {
+    display: none;
+  }
+
+  #loggedin {
+    display: none;
+  }
 
   
   
   
-  ul {
+  nav > ul {
     list-style: none; /* Remove the default bullet points from the list */
     color: white;
     width:200px;
@@ -60,7 +90,58 @@ p  {
     background-color: rgb(110, 95, 95); /* Change the background color of the links when hovered over */
     border-radius: 1px;
   }
-  
+ 
+    .search-container{
+      width: 100%;
+      min-height: 60.5vh;
+      padding: 5%;
+     /* background-image: linear-gradient(rgba(0,8,51,0.9), rgba(0,8,51,0.9)), url(images/planets_universe_17-wallpaper-1920x1080.jpg);*/
+      background-position: center;
+      background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .search-bar {
+      width: 100%;
+      max-width: 700px;
+      background-color: rgb(255, 255, 255, 0.2);
+      display: flex;
+      align-items: center;
+      border-radius: 60px;
+      padding: 10px 20px;
+      backdrop-filter: blur(4px) saturate(180%);
+    }
+
+    .search-bar input {
+      background: transparent;
+      flex: 1;
+      border: 0;
+      outline: none;
+      padding: 24px 20px;
+      font-size: 20px;
+      color: #cac7ff;
+      
+    }
+
+    ::placeholder {
+      color: #cac7ff;
+    }
+
+    .search-bar button img {
+      width: 25px;
+    }
+
+    .search-bar button {
+      border: 0;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      background: #58629b;
+      cursor: pointer;
+    }
+  /*
   #search-container {
     position: relative;
     z-index: 3;
@@ -93,11 +174,9 @@ p  {
   #search-button:hover {
     background-color: #006305;
   }
+*/
 
-  #dagens {
-    width: 100%;
-  border: 1px solid rgb(255, 255, 255);
-  }
+ 
 
 
   #field {
@@ -106,16 +185,7 @@ p  {
     height:200px;
   }
 
-  #AstronomiDag {
-    position: relative;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    width: 1200px;
-    height: 600px;
-    background-color: rgb(99, 100, 100);
-  }
+  
 
   #content{
     display: flex;
@@ -186,11 +256,7 @@ border-radius: 5px;
 }
   
 
-#nav {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-  }
+
 
 div > button{
     background-color: rgb(59, 59, 74);
@@ -201,3 +267,4 @@ div > button{
     cursor: pointer;
     display: block;
   }
+    
