--- a/frontend/style.css
+++ b/frontend/style.css
@@ -60,7 +60,7 @@ p  {
     border-radius: 1px;
   }
   
-  #search-container, #search-container2 {
+  #search-container {
     position: relative;
     z-index: 3;
     display: flex;
@@ -68,7 +68,7 @@ p  {
     justify-content: center;
   }
   
-  #search-input, #search-song {
+  #search-input{
     width: 40%;
     height: 40px;
     border: 1px solid #ccc;
@@ -78,7 +78,7 @@ p  {
     margin-block: 80px;
   }
   
-  #search-button, #search-button-song{
+  #search-button{
     width: 10%;
     height: 40px;
     background-color: rgb(59, 59, 74);
@@ -130,7 +130,7 @@ p  {
 }
 
 
-  #imgTable {
+  #imgTable, #imgTable2 {
     width: 400px;
     background: #fff;
     padding: 1rem;
@@ -140,14 +140,14 @@ p  {
     border-radius: 10px;
 
   }
-  #imgTable tbody {
+  #imgTable, #imgTab tbody {
     text-align: center;
     margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
   }
-  #imgTable th {
+  #imgTable, #imgTable2 th {
     border-bottom: 1px solid gray;
     width: 50%;
     height: 50%;
@@ -156,13 +156,13 @@ p  {
     color:black
   }
 
-  #imgTable img {
+  #imgTable, #imgTable2 img {
 width:100px;
 height:100px;
 border-radius: 5px;
   }
 
-  #imgTable td {
+  #imgTable, #imgTable2 td {
     border-bottom: 1px solid rgb(114, 94, 94);
     width:50%;
     color:black
@@ -172,13 +172,7 @@ border-radius: 5px;
     width:50px;
 
   }
-  #tracksTable tbody {
-    text-align: center;
-    margin-top: 2%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-  }
+
   .img-table{
     width: 100px;
     height: 100px;
