--- a/frontend/style.css
+++ b/frontend/style.css
@@ -156,13 +156,13 @@ p  {
     color:black
   }
 
-  #imgTable img {
+  #imgTable img, #imgTable2 img {
 width:100px;
 height:100px;
 border-radius: 5px;
   }
 
-  #imgTable td {
+  #imgTable td, #imgTable2 td {
     border-bottom: 1px solid rgb(114, 94, 94);
     width:50%;
     color:black
