--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,182 +1,172 @@
 body {
   background-image: url('./images/space.jpeg');
   height: auto;
-  color:#fff
+  color: #fff;
 }
+
 #container {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left:17%
-  }
-  #container, p {
-    width:70%
-  }
-.icons{
-    width: 25px;
-    height:25px;
-    float: left;
-    padding-top: 5px;
-  }
-  .nav-item {
-    flex: 1;
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-    transition: all 0.3s;
-  }
+  text-align: center;
+}
 
-  nav > ul {
-    list-style: none; 
-    color: white;
-    width:200px;
-  }
-  
-  li {
-    margin-bottom: 30px; 
-    font-family: 'Seymour One', sans-serif;
-    font-size: x-large;
+.icons {
+  width: 25px;
+  height: 25px;
+  float: left;
+  padding-top: 5px;
+}
 
-  }
-  
-  a {
-    display: block; 
-    text-decoration: none;
-    color: #fff;
-    font-family: 'Seymour One', sans-serif;
+nav>ul {
+  list-style: none;
+  color: white;
+}
 
-  }
-  
-p  {
-  display: block; 
-  padding: 10px; 
-  text-decoration: none; 
+li,
+h1,
+h2 {
+  margin-bottom: 30px;
+  font-family: 'Seymour One', sans-serif;
+  font-size: x-large;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+a {
+  display: block;
+  text-decoration: none;
   color: #fff;
   font-family: 'Seymour One', sans-serif;
-
 }
-  a:hover, li:hover {
-    background-color: rgb(110, 95, 95); 
-    border-radius: 1px;
-  }
-  
-  #search-container{
-    position: relative;
-    z-index: 3;
-    display: flex;
-    margin: auto;
-    justify-content: center;
-  }
-  
-  #search-input{
-    width: 40%;
-    height: 40px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 0 12px;
-    font-size: 16px;
-    margin-block: 80px;
-  }
-  
-  #search-button {
-    width: 10%;
-    height: 40px;
-    background-color: rgb(59, 59, 74);
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-block: 80px;
-  }
-  
-  #search-button:hover {
-    background-color: #006305;
-  }
 
+p {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #fff;
+  font-family: 'Seymour One', sans-serif;
+}
 
-  #content{
-    display: flex;
-    align-items: flex-start;
-  }
+a:hover,
+li:hover {
+  background-color: rgb(110, 95, 95);
+  border-radius: 1px;
+}
 
+#search-container {
+  margin: auto;
+  text-align: center;
+}
 
-#tableContainer{
-  width: 80%;
+#search-input {
+  width: 40%;
+  height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0 12px;
+  font-size: 16px;
+  margin: 20px;
+}
+
+#search-button {
+  width: 10%;
+  height: 40px;
+  background-color: rgb(59, 59, 74);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 20px;
+}
+
+#tableContainer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 20px auto;
+}
+
+#imgTable,
+#imgTable2 {
+  width: 300px;
+  background: #fff;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#imgTable th,
+#imgTable2 th {
+  border-bottom: 1px solid gray;
+  width: 50%;
+  height: 50%;
+  font-weight: bold;
+  padding: 0.5rem;
+  color: black;
+}
+
+#imgTable img,
+#imgTable2 img {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+}
+
+#imgTable td,
+#imgTable2 td {
+  border-bottom: 1px solid rgb(114, 94, 94);
+  width: 50%;
+  color: black;
+}
+
+#tracksTable tbody {
+  text-align: center;
+  margin: 20px auto;
+  border-radius: 10px;
+}
+
+.img-table {
+  width: 100px;
+  height: 100px;
+}
+
+nav {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+button {
+  background-color: rgb(59, 59, 74);
+  color: rgb(255, 255, 255);
+  padding: 8px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: 'Seymour One', sans-serif;
+}
+
+#profile li {
+  font-size: 20px;
+  text-decoration: none;
+}
+
+#confirmation-message {
+  font-size: 20px;
+}
+
+#wraps {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+}
+
+#tablecontainer {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-
-  #imgTable, #imgTable2 {
-    width: 300px;
-    background: #fff;
-    padding: 1rem;
-    text-align: center;
-    margin-top: 2%;
-    margin-right: 30%;
-    border-radius: 10px;
-
-  }
-  #imgTable tbody, #imgTable2 tbody {
-    text-align: center;
-    margin-top: 2%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-  }
-  #imgTable th, #imgTable2 th {
-    border-bottom: 1px solid gray;
-    width: 50%;
-    height: 50%;
-    font-weight: bold;
-    padding: 0.5rem;
-    color:black
-  }
-
-  #imgTable img, #imgTable2 img {
-width:100px;
-height:100px;
-border-radius: 5px;
-  }
-
-  #imgTable td, #imgTable2 td {
-    border-bottom: 1px solid rgb(114, 94, 94);
-    width:50%;
-    color:black
-  }
-
-  tr {
-    width:50px;
-
-  }
-  #tracksTable tbody {
-    text-align: center;
-    margin-top: 2%;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-  }
-  .img-table{
-    width: 100px;
-    height: 100px;
+#imgTable,
+#imgTable2 {
+  width: 300px;
+  background: #fff;
+  padding: 1rem;
+  text-align: center;
+  margin: 20px;
+  border-radius: 10px;
 }
-  
-
-#nav {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-  }
-
-div > button{
-    background-color: rgb(59, 59, 74);
-    color: rgb(255, 255, 255);
-    padding: 8px;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    display: block;
-  }
-    
