--- a/frontend/style.css
+++ b/frontend/style.css
@@ -83,6 +83,12 @@ li:hover {
   margin: 20px auto;
 }
 
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 #imgTable,
 #imgTable2 {
   width: 300px;
@@ -93,12 +99,12 @@ li:hover {
 
 #imgTable th,
 #imgTable2 th {
-  border-bottom: 1px solid gray;
   width: 50%;
   height: 50%;
   font-weight: bold;
   padding: 0.5rem;
   color: black;
+  
 }
 
 #imgTable img,
@@ -131,6 +137,12 @@ nav {
   margin-right: 20px;
 }
 
+table tr:hover {
+  background-color: #f5f5f5;
+}
+table tr {
+  border-radius: 5px;
+}
 button {
   background-color: rgb(59, 59, 74);
   color: rgb(255, 255, 255);
